[package]
name = "wes"
description = "Who's Eating Space? Command-line tool to see disk usage."
version = "0.3.0"
authors = ["Dmitri Melnikov"]
edition = "2018"
resolver = "2"
publish = false

[dependencies]
ahash = "0.7.4"
argh = "0.1.5"
bytesize = "1.1.0"
tabwriter = "1.2.1"
walkdir = "2.3.2"

[profile.release]
debug = 2
lto = "fat"
opt-level = 3
panic = "abort"
