[package]
name = "wes"
description = "Who's Eating Space? Command-line tool to see disk usage."
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
ahash = "0.7.6"
argh = "0.1.7"
bytesize = "1.1.0"
tabwriter = "1.2.1"
walkdir = "2.3.2"

[profile.release]
debug = 2
lto = "fat"
opt-level = 3
panic = "abort"
